[package]
name = "game_engine"
version = "0.1.0"
authors = ["Tyler Moroso <tlmoroso55@gmail.com>"]
edition = "2018"

[lib]
name = "game_engine"
path = "src/lib.rs"

[features]
trace = ["tracing", "tracing-subscriber", "tracing-bunyan-formatter", "tracing-appender"]

[dependencies]
coffee = {version = "0.4", features = ["opengl"]}
specs = {version = "0.16.1", features = ["specs-derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
thiserror = "1.0.22"
anyhow = "1.0.34"
tracing = {version = "0.1.22", optional = true}
tracing-subscriber = {version = "0.2.15", optional = true, features = ["registry"]}
tracing-bunyan-formatter = {version = "0.1.7", optional = true}
tracing-log = {version = "0.1.1", optional = true}
tracing-appender = {version = "0.1.1", optional = true}
kira = "0.3.0"
tokio = {version = "1.2.0", features = ["full"]}
gilrs = "0.8.0"
glfw = "0.41"
luminance = "0.43.2"
luminance-glfw = "0.15"
luminance-windowing = "0.9"