[package]
name = "game_engine"
version = "0.1.0"
authors = ["Tyler Moroso <tlmoroso55@gmail.com>"]
edition = "2018"

[lib]
name = "game_engine"
path = "src/lib.rs"

[features]
trace = ["tracing", "tracing-subscriber", "tracing-bunyan-formatter", "tracing-appender", "tracing-log"]

[dependencies]
specs = {version = "0.17.0", features = ["specs-derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
thiserror = "1.0.22"
anyhow = "1.0.34"
tracing = {version = "0.1.26", optional = true}
tracing-subscriber = {version = "0.2.19", optional = true}
tracing-bunyan-formatter = {version = "0.1.7", optional = true}
tracing-log = {version = "0.1.1", optional = true}
tracing-appender = {version = "0.1.2", optional = true}
kira = "0.3.0"
gilrs = "0.8.0"
luminance = "0.46.0"
luminance-glfw = "0.18.0"
luminance-derive = "0.9.0"
luminance-front = "0.6.0"
luminance-gl = "0.19.0"
glfw = "0.43.0"
image = "0.23.14"
glam = "0.17.1"
rayon = "1.5.1"
parking_lot = "0.11.2"
atomic_float = "0.1.0"
once_cell = "1.9.0"
crossbeam = "0.8.1"